# zeldovich-PLT

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  OLD_meta_RNG.md  README.md  STimer.h  block_array.cpp  example.par  header.h  highres.par  meson.build  meson.options  my.par  output.cpp  oversample.par  parameters.cpp  power_spectrum.cpp  rng_test.c  rng_test.out  spline_function.h  white_noise.pow  wmap1new.pow  zeldovich.cpp
.github/workflows/: tests.yaml
ParseHeader/: HeaderStream.cc  Makefile  NOTES  ParseHeader.cc  ParseHeader.hh  README  phDriver.cc  phDriver.hh  phScanner.ll  stringutil.cc  stringutil.hh
include/: STimer.h  block_array.h  header.h  output.h  parameters.h  power_spectrum.h  spline_function.h  zeldovich.h
include/pcg-rng/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
src/: STimer.cc  block_array.cpp  output.cpp  parameters.cpp  power_spectrum.cpp  zeldovich.cpp
subprojects/ParseHeader/: .gitignore  Makefile  README.md  meson.build
subprojects/ParseHeader/include/: ParseHeader.hh  phDriver.hh  stringutil.hh
subprojects/ParseHeader/include/detail/: phDriver.hh  stringutil.hh
subprojects/ParseHeader/src/: HeaderStream.cc  ParseHeader.cc  phDriver.cc  phParser.yy  phScanner.ll  stringutil.cc
